# gtasks-cli

./: .gitignore  BUILDING.md  DESIGN.md  DESIGN_SORTING.md  GEMINI.md  IMPLEMENTATION_PLAN.md  MILESTONES.md  MODULE.bazel  README.md  TODO_FEATURE_OUTPUT.md  TODO_FEATURE_SEARCH.md  TODO_FEATURE_TUI.md  TODO_REFACTOR_CMD.md  TODO_REFACTOR_GTASKS.md  TODO_REFACTOR_STORE.md  WORKLOG.md  go.mod  go.sum  gtasks-cli.rb  main.go
cmd/: accounts.go  helpers.go  interactive.go  root.go  tasklists.go  tasks.go
design/: tui-refactoring-sdd.md  tui-refactoring-tasks.md
e2e/: README.md  e2e_test.go
go/: BUILD.bazel  go.mod  go.sum
go/cmd/todo/: BUILD.bazel  README.md  install.sh  main.go  main_test.go
go/cmd/todo/testdata/aggregated/: expected.out  test.go  test.py
go/cmd/todo/testdata/help/: expected.out
go/cmd/todo/testdata/no-todos/: test.go
go/cmd/todo/testdata/quiet-no-validate/: expected.err
go/cmd/todo/testdata/simple/: expected.out  test.go
go/cmd/todo/testdata/validation/: test.go
go/cmd/todo/testdata/validation-aggregated/: expected.out  test.go
go/cmd/todo/testdata/validation-aggregated-all-invalid/: expected.out  test.go
go/cmd/todo/testdata/validation-aggregated-mixed-invalid/: expected.out  test.go
go/cmd/todo/testdata/validation-invalid/: expected.out
go/cmd/todo/testdata/validation-quiet-invalid/: test.go
go/e2e/: README.md  e2e_test.go
internal/auth/: README.md  auth.go  credential_store.go  oauth_flow.go
internal/config/: config.go  config_test.go
internal/gtasks/: client.go  filter.go  filter_test.go  mock_server_test.go  (+11 more)
(+46 files in other folders)
